# AlphaGPT

./: .env.example  CATREADME.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  times.py  times_yf_jp.py  times_yf_jp_multi.py
data_pipeline/: config.py  data_manager.py  db_manager.py  run_pipeline.py
data_pipeline/providers/: base.py  birdeye.py  dexscreener.py
docs/superpowers/plans/: 2026-03-25-dexscreener-provider-switch.md  2026-03-25-times-yf-jp-plan.md
docs/superpowers/specs/: 2026-03-25-dexscreener-provider-design.md  2026-03-25-times-yf-jp-design.md
model_core/: config.py  data_loader.py  engine.py
notebooks/: AlphaGPT_Colab_Train.ipynb  colab_birdeye_train.py
strategy_manager/: config.py  runner.py
tests/data_pipeline/: test_birdeye_provider.py  test_config_and_selection.py  test_db_manager.py  test_dexscreener_provider.py  test_run_pipeline.py
tests/experiments/: test_times_yf_jp.py  test_times_yf_jp_multi.py
tests/model_core/: test_data_loader.py
tests/strategy_manager/: test_strategy_source_config.py
