[project]
name = "alphagpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "asyncpg>=0.28.0",
    "base58>=2.1.0",
    "loguru>=0.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.0",
    "solana>=0.30.0",
    "solders>=0.18.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.28.0",
    "torch>=2.0.0",
    "tqdm>=4.66.0",
]
